# 01-WebGpu

./: Cargo.toml  README.MD  README.md
first-webgpu-app/: index.html  package.json
first-webgpu-app/src/: Renderer.ts  main.ts
first-webgpu-app/src/shaders/: triangle.wgsl
rust-wgpu-learning/: README.md
rust-wgpu-learning/src/: main.rs
src/: common.rs  main.rs  surface_data.rs  transforms.rs
src/shaders/: line-list.wgsl  parametric.wgsl
webgpu-vite-vanilla-game/: package-lock.json
webgpu-vite-vanilla-game/src/: Renderer.ts  buffer-util.ts  camera.ts  content.ts  geometry.ts  sprite-pipeline.ts  texture.ts
webgpu-vite-vanilla-game/src/shaders/: shader.wgsl  triangle.wgsl
